# ProjectPredict

./: .codeclimate.yml  .gitignore  .travis.yml  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  custom_models.rst  custompdfs.rst  daft_graphs.py  examples.rst  index.rst  installation.rst  intro.rst  make.bat  next_steps.rst  recommendations.rst  requirements.txt  visualization.rst
projectpredict/: __init__.py  _version.py  app.py  artists.py  config.py  context.py  exceptions.py  pdf.py  project.py  task.py
projectpredict/learningmodels/: __init__.py  scikit.py
projectpredict/services/: marshmallow.py  memorystore.py
tests/: test_artist.py  test_context.py  test_endpoints.py  test_gaussian_proccess_regressor.py  test_memory_store.py  test_pdf.py  test_project.py  test_task.py  util.py
