[metadata]
description-file = README.md

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.
    def draw
ignore_errors = True
sort = Cover
fail_under = 88
show_missing = True
precision = 2
